--- a/booksearch/client/public/index.html
+++ b/booksearch/client/public/index.html
@@ -26,6 +26,11 @@
   <title>Book Search</title>
 </head>
 
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+</script>
+
 <body>
   <noscript>
     You need to enable JavaScript to run this app.
